--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# to Reduce the size of release binary.
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+opt-level = "z"  # Optimize for size.
+lto = true
+codegen-units = 1
+panic = "abort"
+
 [dependencies]
-axum = "^0"
 dotenvy = "^0"
 sea-orm = { version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
 tokio = { version = "^1", features = ["full"] }
